--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,3 +28,6 @@ serde_json = { version = "1.0", features = ["raw_value"] }
 
 [dev-dependencies]
 ctor = "0.2.5"
+assert_cmd = "2.0.12"
+predicates = "3.0.4"
+escargot = "0.5.8"
