--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ rand = { version="0.8.5" }
 serde = {version="1.0", features = ["derive"]}
 serde_json = { version = "1.0", features = ["raw_value"] }
 diesel = { version = "2.1.4", features = ["sqlite"] }
+diesel_migrations = "2.1.0"
 
 [dev-dependencies]
 uuid = { version = "1.6.1", features = ["serde", "v4"] }
