--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,9 @@ default = ["std"]
 std = ["crypto/std", "objects/std"]
 testing = ["objects/testing", "mock"]
 
+[workspace]
+members = [".", "entity", "migration"]
+
 [dependencies]
 clap = { version = "4.3" , features = ["derive"] }
 crypto = { package = "miden-crypto", git = "https://github.com/0xPolygonMiden/crypto", branch = "next", default-features = false }
@@ -26,6 +29,11 @@ rusqlite_migration = { version = "1.0" }
 rand = { version="0.8.5" }
 serde = {version="1.0", features = ["derive"]}
 serde_json = { version = "1.0", features = ["raw_value"] }
+futures = "0.3.28"
+sea-orm = { version = "^0.12.0", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros"], default-features = false }
+entity = { path = "entity" }
+migration = { path = "migration" }
+tokio = {version = "1.34.0", features = ["macros", "rt-multi-thread"] }
 
 [dev-dependencies]
 uuid = { version = "1.6.1", features = ["serde", "v4"] }
