chore(midenup): rename miden-cli and miden executable to miden-client-cli and miden-client respectively (#960)
This commit was cherry picked into main in order to include the miden-client's
executable with the rest of the miden components in midenup

Co-authored-by: igamigo <ignacio.amigo@lambdaclass.com>
Signed-off-by: Tomas Fabrizio Orsi <tomas.orsi@lambdaclass.com>

--- a/bin/miden-cli/Cargo.toml
+++ b/bin/miden-cli/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "miden-cli"
+name = "miden-client-cli"
 version = "0.9.4"
 description = "CLI binary application that facilitates interaction with the Miden rollup"
 readme = "README.md"
@@ -13,7 +13,7 @@ rust-version.workspace = true
 edition.workspace = true
 
 [[bin]]
-name = "miden"
+name = "miden-client"
 path = "src/main.rs"
 
 [lints]
