--- a/crates/web-client/Cargo.toml
+++ b/crates/web-client/Cargo.toml
@@ -2,7 +2,7 @@
 authors.workspace      = true
 categories             = ["no-std"]
 description            = "Web Client library that facilitates interaction with the Miden rollup"
-documentation          = "https://docs.rs/miden-client-web/0.10.0"
+documentation          = "https://docs.rs/miden-client-web/0.11.0"
 edition.workspace      = true
 keywords               = ["client", "miden", "wasm", "web"]
 license.workspace      = true
@@ -10,7 +10,7 @@ name                   = "miden-client-web"
 readme                 = "README.md"
 repository.workspace   = true
 rust-version.workspace = true
-version                = "0.10.0"
+version.workspace      = true
 
 [package.metadata.cargo-machete]
 ignored = ["wasm-bindgen-futures"]
@@ -26,7 +26,7 @@ testing = ["miden-client/testing"]
 miden-client = { default-features = false, features = [
   "idxdb",
   "web-tonic",
-], path = "../rust-client", version = "0.10" }
+], path = "../rust-client", version = "0.11" }
 
 # Miden dependencies
 miden-lib     = { workspace = true }
