--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,8 @@ authors      = ["miden contributors"]
 edition      = "2024"
 license      = "MIT"
 repository   = "https://github.com/0xMiden/miden-client"
-rust-version = "1.87"
+rust-version = "1.88"
+version      = "0.11.0"
 
 [workspace.dependencies]
 # Miden dependencies
